# parallax

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/parallax/: __init__.py  axis_coverage.py  cli.py  config.py  core.py
src/parallax/extractors/: __init__.py  _field_canon.py  base.py  cache_keys.py  dart_api_calls.py  dart_json_fields.py  django_models.py  env_vars.py  fastapi_routes.py  http_urls.py  pydantic_fields.py  redis_keys.py  sequelize.py  sqlalchemy_models.py  tree_sitter_base.py
src/parallax/reporters/: __init__.py  html_reporter.py  json_reporter.py  sarif_reporter.py  text_reporter.py
src/parallax/verify/: __init__.py  core.py  python_ast.py
tests/: test_axis_coverage.py  test_cache_keys_extractor.py  test_config_and_ci.py  test_core.py  test_dart_api_calls_extractor.py  test_dart_json_fields_extractor.py  test_django_extractor.py  test_env_vars_extractor.py  test_fastapi_routes_extractor.py  test_field_canon.py  test_http_urls_extractor.py  test_pydantic_fields_extractor.py  test_redis_keys_extractor.py  test_repo_awareness.py  test_reporters.py  test_sequelize_extractor.py  test_sqlalchemy_extractor.py  test_verify.py
tests/fixtures/django_app/billing/: models.py
tests/fixtures/django_app/users/: models.py  views.py
tests/fixtures/repo_app/: follow_repository.py  models.py  service_inline.py  service_via_repo.py
tests/fixtures/sequelize_app/: models.ts  service_a.ts  service_b.ts
tests/fixtures/sqlalchemy_app/: models.py  service_a.py  service_b.py
tests/fixtures/verify_app/: a.py  b.py  c.py
