[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parallax-scan"
version = "0.4.0"
description = "Find functions that work on the same resource through different code paths — the architectural-duplication detector that token-similarity tools miss."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Ziyad Alotaibi", email = "ziyad.alotaibe@gmail.com" }
]
keywords = ["duplication", "static-analysis", "ast", "refactor", "code-quality"]
dependencies = [
  "tomli; python_version < '3.11'",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Intended Audience :: Developers",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-cov>=4",
  "ruff>=0.5",
  "tree-sitter>=0.21",
  "tree-sitter-typescript>=0.23",
]
treesitter = [
  "tree-sitter>=0.21",
  "tree-sitter-typescript>=0.23",
]

[project.scripts]
parallax = "parallax.cli:main"

[project.urls]
Homepage = "https://github.com/ziyad00/parallax"
Issues = "https://github.com/ziyad00/parallax/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
